--- a/_sass/pages/_team.scss
+++ b/_sass/pages/_team.scss
@@ -13,17 +13,31 @@
 $team_card_inner_pad: 25px;
 $team_card_height: 270px;
 $ava_diameter: 126px;
+$ava_wrap_width: 180px;
 .team_member {
   @include clearfix;
   margin-bottom: 40px;
   min-height: $team_card_height;
+  position: relative;
   background: $white;
   border-radius: $mid_radius;
   @extend .smooth_shadow;
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 180px;
+    background: $team_ava_bg;
+    border-radius: 10px 0 0 10px;
+  }
   .ava_wrap {
     padding: $team_card_inner_pad;
     position: relative;
     float: left;
+    margin-right: 30px;
+    min-height: 280px;
   }
   .ava {
     display: block;
@@ -37,17 +51,25 @@ $ava_diameter: 126px;
     vertical-align: middle;
     color: $white;
     text-align: center;
-    float: left;
+    float: none;
     display: block;
     height: 40px;
-    padding: 0 15px;
+    width: $ava_diameter;
+    padding: 3px 15px 6px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
     background: $orange;
     margin-bottom: $team_card_inner_pad;
     margin-left: $team_card_inner_pad;
     border-radius: $radius;
   }
   .bio_wrap {
+    position: relative;
     padding: $team_card_inner_pad;
+    z-index: 1;
     .name {
       @include lato(1.750em);
       font-weight: 400;
